--- a/QuantExt/qle/instruments/Makefile.am
+++ b/QuantExt/qle/instruments/Makefile.am
@@ -27,7 +27,8 @@ libInstruments_la_SOURCES = \
 	commodityforward.cpp \
 	impliedbondspread.cpp \
     fixedbmaswap.cpp \
-	crossccyfixfloatswap.cpp
+	crossccyfixfloatswap.cpp \
+	rebatedexercise.cpp
 
 this_includedir=${includedir}/${subdir}
 this_include_HEADERS = \
@@ -54,7 +55,8 @@ this_include_HEADERS = \
 	commodityforward.hpp \
 	impliedbondspread.hpp \
     fixedbmaswap.hpp \
-	crossccyfixfloatswap.hpp
+	crossccyfixfloatswap.hpp \
+	rebatedexercise.hpp
 
 noinst_LTLIBRARIES = libInstruments.la
 
