[Touch: 819]Main elements of the refactor plus first regression test
Some more things to do:
- more regression tests based on real market data and sample termsheets
- wrapper XML element to allow for strip of APO or European comm opts
- update the documentation (fair bit here)

--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="ored\report\inmemoryreport.hpp" />
     <ClInclude Include="ored\report\report.hpp" />
     <ClInclude Include="ored\utilities\calendaradjustmentconfig.hpp" />
+    <ClInclude Include="ored\utilities\conventionsbasedfutureexpiry.hpp" />
     <ClInclude Include="ored\utilities\correlationmatrix.hpp" />
     <ClInclude Include="ored\utilities\csvfilereader.hpp" />
     <ClInclude Include="ored\utilities\currencycheck.hpp" />
@@ -285,6 +286,7 @@
     <ClCompile Include="ored\portfolio\vanillaoption.cpp" />
     <ClCompile Include="ored\report\csvreport.cpp" />
     <ClCompile Include="ored\utilities\calendaradjustmentconfig.cpp" />
+    <ClCompile Include="ored\utilities\conventionsbasedfutureexpiry.cpp" />
     <ClCompile Include="ored\utilities\correlationmatrix.cpp" />
     <ClCompile Include="ored\utilities\csvfilereader.cpp" />
     <ClCompile Include="ored\utilities\currencycheck.cpp" />
