--- a/QuantExt/qle/CMakeLists.txt
+++ b/QuantExt/qle/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(QuantExt_SRC calendars/chile.cpp
 calendars/colombia.cpp
 calendars/france.cpp
+calendars/israel.cpp
 calendars/malaysia.cpp
 calendars/netherlands.cpp
 calendars/peru.cpp
@@ -166,6 +167,7 @@ set(QuantExt_HDR auto_link.hpp
 calendars/chile.hpp
 calendars/colombia.hpp
 calendars/france.hpp
+calendars/israel.hpp
 calendars/malaysia.hpp
 calendars/netherlands.hpp
 calendars/peru.hpp
