fix build errors

--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -768,6 +768,10 @@
     <ClInclude Include="qle\calendars\israel.hpp">
       <Filter>time\calendars</Filter>
     </ClInclude>
+    <ClInclude Include="qle\indexes\ibor\primeindex.hpp" />
+    <ClInclude Include="qle\instruments\rebatedexercise.hpp">
+      <Filter>instruments</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="cashflows">
@@ -1299,9 +1303,13 @@
     </ClCompile>
     <ClCompile Include="qle\pricingengines\lgmconvolutionsolver.cpp">
       <Filter>pricingengines</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="qle\calendars\israel.cpp">
       <Filter>time\calendars</Filter>
+    </ClCompile>
+    <ClCompile Include="qle\indexes\ibor\primeindex.cpp" />
+    <ClCompile Include="qle\instruments\rebatedexercise.cpp">
+      <Filter>instruments</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
