add ester and sofr indices

--- a/QuantExt/qle/CMakeLists.txt
+++ b/QuantExt/qle/CMakeLists.txt
@@ -34,7 +34,9 @@ indexes/commodityindex.cpp
 indexes/equityindex.cpp
 indexes/fxindex.cpp
 indexes/ibor/brlcdi.cpp
+indexes/ibor/ester.cpp
 indexes/ibor/primeindex.cpp
+indexes/ibor/sofr.cpp
 indexes/inflationindexwrapper.cpp
 indexes/region.cpp
 instruments/averageois.cpp
@@ -215,6 +217,7 @@ indexes/ibor/czkpribor.hpp
 indexes/ibor/demlibor.hpp
 indexes/ibor/dkkcibor.hpp
 indexes/ibor/dkkois.hpp
+indexes/ibor/ester.hpp
 indexes/ibor/hkdhibor.hpp
 indexes/ibor/hufbubor.hpp
 indexes/ibor/idridrfix.hpp
@@ -239,6 +242,7 @@ indexes/ibor/sekstibor.hpp
 indexes/ibor/sgdsibor.hpp
 indexes/ibor/sgdsor.hpp
 indexes/ibor/skkbribor.hpp
+indexes/ibor/sofr.hpp
 indexes/ibor/thbbibor.hpp
 indexes/ibor/tonar.hpp
 indexes/ibor/twdtaibor.hpp
