--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -115,5 +115,8 @@
     <ClCompile Include="calendaradjustment.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="creditdefaultswapdata.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
