--- a/Docker/Dockerfile-Boost
+++ b/Docker/Dockerfile-Boost
@@ -4,8 +4,15 @@ FROM debian:${tag}
 MAINTAINER Quaternion Risk Management
 LABEL Description="Provide a base environment for building in C++ with Boost"
 
-RUN apt-get update \
- && apt-get install -y build-essential wget libbz2-dev autoconf libtool dos2unix cmake\
+#we update to a UK debian mirror. This is from https://www.debian.org/mirror/sponsors.html
+RUN echo \
+   'deb http://ukdebian.mirror.anlx.net/debian stable main contrib non-free\n \
+    deb-src http://ukdebian.mirror.anlx.net/debian stable main contrib non-free\n \
+    deb-src http://ukdebian.mirror.anlx.net/debian stable-updates main contrib non-free\n' \
+    > /etc/apt/sources.list
+
+RUN  apt-get update && apt-get upgrade -y \
+ && apt-get install -f -y build-essential wget libbz2-dev autoconf libtool dos2unix cmake\
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
