--- a/Docker/Dockerfile-ORE-App
+++ b/Docker/Dockerfile-ORE-App
@@ -5,6 +5,14 @@ FROM env_ore:${ore_version} as env_ore
 
 FROM debian:${debian_tag}
 
+#we update to a UK debian mirror. This is from https://www.debian.org/mirror/sponsors.html
+RUN echo \
+   'deb http://ukdebian.mirror.anlx.net/debian stable main contrib non-free\n \
+    deb-src http://ukdebian.mirror.anlx.net/debian stable main contrib non-free\n \
+    deb-src http://ukdebian.mirror.anlx.net/debian stable-updates main contrib non-free\n' \
+    > /etc/apt/sources.list
+
+
 COPY Examples /ore/Examples
 
 RUN mkdir /ore/App
