fixes after merge with master

--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -14,6 +14,7 @@ commodityvolcurveconfig.cpp
 conventions.cpp
 correlationcurveconfig.cpp
 cpiswap.cpp
+creditdefaultswapdata.cpp
 crossassetmodeldata.cpp
 curveconfig.cpp
 digitalcms.cpp
