--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -4,6 +4,7 @@ set(QuantExt-Test_SRC analyticlgmswaptionengine.cpp
 blackvariancecurve.cpp
 blackvariancesurfacesparse.cpp
 blackvariancesurfacestddevs.cpp
+blackvolsurfacedelta.cpp
 bonds.cpp
 capfloortermvolcurve.cpp
 cashflow.cpp
