--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -786,6 +786,9 @@
     <ClInclude Include="qle\indexes\ibor\sofr.hpp">
       <Filter>indexes\ibor</Filter>
     </ClInclude>
+    <ClInclude Include="qle\termstructures\blackvolsurfacedelta.hpp">
+      <Filter>termstructures</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="cashflows">
@@ -1338,6 +1341,9 @@
     </ClCompile>
     <ClCompile Include="qle\indexes\ibor\sofr.cpp">
       <Filter>indexes\ibor</Filter>
+    </ClCompile>
+    <ClCompile Include="qle\termstructures\blackvolsurfacedelta.cpp">
+      <Filter>termstructures</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
