Add all other missing tests to the VS project files

--- a/OREAnalytics/test/OREAnalyticsTestSuite.vcxproj
+++ b/OREAnalytics/test/OREAnalyticsTestSuite.vcxproj
@@ -35,6 +35,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="oreatoplevelfixture.hpp" />
     <ClInclude Include="testmarket.hpp" />
     <ClInclude Include="testportfolio.hpp" />
   </ItemGroup>
