--- a/OREAnalytics/test/OREAnalyticsTestSuite.vcxproj.filters
+++ b/OREAnalytics/test/OREAnalyticsTestSuite.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClInclude Include="testportfolio.hpp">
       <Filter>headers</Filter>
     </ClInclude>
+    <ClInclude Include="oreatoplevelfixture.hpp">
+      <Filter>headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cube.cpp">
