--- a/OREData/test/OREDataTestSuite.vcxproj
+++ b/OREData/test/OREDataTestSuite.vcxproj
@@ -674,6 +674,7 @@
     <ClCompile Include="todaysmarket.cpp" />
     <ClCompile Include="xmlmanipulation.cpp" />
     <ClCompile Include="yieldcurve.cpp" />
+    <ClCompile Include="zerocouponswap.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
