--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -118,5 +118,8 @@
     <ClCompile Include="creditdefaultswapdata.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="zerocouponswap.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
