--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClCompile Include="blackvolsurfacedelta.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="forwardbond.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
@@ -166,6 +169,9 @@
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="utilities.hpp">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="toplevelfixture.hpp">
       <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
