--- a/QuantExt/QuantExt.vcxproj
+++ b/QuantExt/QuantExt.vcxproj
@@ -490,6 +490,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="qle\auto_link.hpp" />
+    <ClInclude Include="qle\calendars\austria.hpp" />
     <ClInclude Include="qle\calendars\chile.hpp" />
     <ClInclude Include="qle\calendars\colombia.hpp" />
     <ClInclude Include="qle\calendars\france.hpp" />
@@ -712,6 +713,7 @@
     <ClInclude Include="qle\time\yearcounter.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="qle\calendars\austria.cpp" />
     <ClCompile Include="qle\calendars\chile.cpp" />
     <ClCompile Include="qle\calendars\colombia.cpp" />
     <ClCompile Include="qle\calendars\france.cpp" />
