--- a/OREData/configure.ac
+++ b/OREData/configure.ac
@@ -44,7 +44,7 @@ AC_PROG_AWK
 AC_PROG_INSTALL
 
 # Default compilation variables
-AC_SUBST([CXXFLAGS],[${CXXFLAGS='-g -O2 -Wall -std=c++11'}])
+AC_SUBST([CXXFLAGS],[${CXXFLAGS='-g -O2 -Wall -std=c++11 -DBOOST_ENABLE_ASSERT_HANDLER'}])
 
 # Help the compiler find external software
 
@@ -94,7 +94,6 @@ else
         AC_SUBST([LDFLAGS],["${LDFLAGS} -L${ql_path}/ql/.libs"])
     fi
 fi
-
 # Continue setup
 
 AC_PROG_CC
