[Touch:996]Tests and prohibited expiries

--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -12,6 +12,7 @@ commodityoption.cpp
 commodityvolcurve.cpp
 commodityvolcurveconfig.cpp
 conventions.cpp
+conventionsbasedfutureexpiry.cpp
 correlationcurveconfig.cpp
 cpiswap.cpp
 creditdefaultswapdata.cpp
