--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -121,5 +121,8 @@
     <ClCompile Include="zerocouponswap.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="conventionsbasedfutureexpiry.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
