--- a/OREData/test/OREDataTestSuite.vcxproj
+++ b/OREData/test/OREDataTestSuite.vcxproj
@@ -648,6 +648,7 @@
     <ClCompile Include="commodityvolcurve.cpp" />
     <ClCompile Include="commodityvolcurveconfig.cpp" />
     <ClCompile Include="conventions.cpp" />
+    <ClCompile Include="conventionsbasedfutureexpiry.cpp" />
     <ClCompile Include="correlationcurveconfig.cpp" />
     <ClCompile Include="cpiswap.cpp" />
     <ClCompile Include="creditdefaultswapdata.cpp" />
