[Touch:984]New strike class for holding information on strikes.
Plan to use this in the commodity volatility market datums. It should
also be used in the other market datums where a strike is allowable.

--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -459,6 +459,9 @@
     <ClInclude Include="ored\configuration\bootstrapconfig.hpp">
       <Filter>configuration</Filter>
     </ClInclude>
+    <ClInclude Include="ored\marketdata\strike.hpp">
+      <Filter>marketdata</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
@@ -811,6 +814,9 @@
     </ClCompile>
     <ClCompile Include="ored\configuration\bootstrapconfig.cpp">
       <Filter>configuration</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\marketdata\strike.cpp">
+      <Filter>marketdata</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
