--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="ored\marketdata\marketimpl.hpp" />
     <ClInclude Include="ored\marketdata\inmemoryloader.hpp" />
     <ClInclude Include="ored\marketdata\security.hpp" />
+    <ClInclude Include="ored\marketdata\strike.hpp" />
     <ClInclude Include="ored\marketdata\structuredcurveerror.hpp" />
     <ClInclude Include="ored\marketdata\swaptionvolcurve.hpp" />
     <ClInclude Include="ored\marketdata\todaysmarket.hpp" />
@@ -228,6 +229,7 @@
     <ClCompile Include="ored\marketdata\marketimpl.cpp" />
     <ClCompile Include="ored\marketdata\inmemoryloader.cpp" />
     <ClCompile Include="ored\marketdata\security.cpp" />
+    <ClCompile Include="ored\marketdata\strike.cpp" />
     <ClCompile Include="ored\marketdata\swaptionvolcurve.cpp" />
     <ClCompile Include="ored\marketdata\todaysmarket.cpp" />
     <ClCompile Include="ored\marketdata\todaysmarketparameters.cpp" />
