--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="ored\marketdata\defaultcurve.hpp" />
     <ClInclude Include="ored\marketdata\equitycurve.hpp" />
     <ClInclude Include="ored\marketdata\equityvolcurve.hpp" />
+    <ClInclude Include="ored\marketdata\expiry.hpp" />
     <ClInclude Include="ored\marketdata\fixings.hpp" />
     <ClInclude Include="ored\marketdata\fxspot.hpp" />
     <ClInclude Include="ored\marketdata\fxtriangulation.hpp" />
@@ -216,6 +217,7 @@
     <ClCompile Include="ored\marketdata\defaultcurve.cpp" />
     <ClCompile Include="ored\marketdata\equitycurve.cpp" />
     <ClCompile Include="ored\marketdata\equityvolcurve.cpp" />
+    <ClCompile Include="ored\marketdata\expiry.cpp" />
     <ClCompile Include="ored\marketdata\fixings.cpp" />
     <ClCompile Include="ored\marketdata\fxspot.cpp" />
     <ClCompile Include="ored\marketdata\fxtriangulation.cpp" />
