--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -462,6 +462,9 @@
     <ClInclude Include="ored\marketdata\strike.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
+    <ClInclude Include="ored\marketdata\expiry.hpp">
+      <Filter>marketdata</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
@@ -816,6 +819,9 @@
       <Filter>configuration</Filter>
     </ClCompile>
     <ClCompile Include="ored\marketdata\strike.cpp">
+      <Filter>marketdata</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\marketdata\expiry.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
   </ItemGroup>
