--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -127,5 +127,8 @@
     <ClCompile Include="strike.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="expiry.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
