--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="ored\configuration\inflationcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\securityconfig.hpp" />
     <ClInclude Include="ored\configuration\swaptionvolcurveconfig.hpp" />
+    <ClInclude Include="ored\configuration\volatilityconfig.hpp" />
     <ClInclude Include="ored\configuration\yieldcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\yieldvolcurveconfig.hpp" />
     <ClInclude Include="ored\marketdata\basecorrelationcurve.hpp" />
@@ -203,6 +204,7 @@
     <ClCompile Include="ored\configuration\inflationcapfloorpricesurfaceconfig.cpp" />
     <ClCompile Include="ored\configuration\inflationcapfloorvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\inflationcurveconfig.cpp" />
+    <ClCompile Include="ored\configuration\volatilityconfig.cpp" />
     <ClCompile Include="ored\configuration\yieldcurveconfig.cpp" />
     <ClCompile Include="ored\marketdata\basecorrelationcurve.cpp" />
     <ClCompile Include="ored\marketdata\capfloorvolcurve.cpp" />
