add missing file to am

--- a/OREData/ored/model/Makefile.am
+++ b/OREData/ored/model/Makefile.am
@@ -34,6 +34,7 @@ this_include_HEADERS = \
     irlgmdata.hpp \
 	lgmdata.hpp \
 	lgmbuilder.hpp \
+	marketobserver.hpp \
 	modelbuilder.hpp \
 	utilities.hpp
 
